tests/ui/unsized-locals/extern-parameter-issue-123887-wrapped.stderr
error[E0277]: the size for values of type `ExternType` cannot be known at compilation time
  --> $DIR/extern-parameter-issue-123887-wrapped.rs:11:6
   |
LL | fn f(_: Wrapper<ExternType>) {}
   |      ^ doesn't have a size known at compile-time
   |
   = help: within `Wrapper<ExternType>`, the trait `Sized` is not implemented for `ExternType`, which is required by `Wrapper<ExternType>: Sized`
note: required because it appears within the type `Wrapper<ExternType>`
  --> $DIR/extern-parameter-issue-123887-wrapped.rs:10:8
   |
LL | struct Wrapper<T: ?Sized>(T);
   |        ^^^^^^^
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL | fn f(_: &Wrapper<ExternType>) {}
   |         +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
